# address_parser

./: Dockerfile  README.md  api.py  demo.py  pyproject.toml
.github/workflows/: python-app.yml
address_parser/: parse.py  utils.py
docs/address_parser/: index.html  parse.html  utils.html
tests/: test_address_parser.py
