[tool.poetry]
name = "address_parser"
version = "0.1.0"
description = ""
authors = ["Hemant Rakesh <basketballlfe600@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.6"
rapidfuzz = "^1.6.2"
pandas = "1.3.0"
opencv-python = "4.5.5.62"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
